# apiGenerator/APIGen/output/api/api/swagger/swagger.yaml
@@ -203,11 +203,7 @@ paths:
       - name: "sort"
         in: "query"
         required: false
-        type: "string"
-      - name: "fields"
-        in: "query"
-        required: false
-        type: "string"
+        type: "string"     
       responses:
         "200":
           description: "Success"
