# apiGenerator/APIGen/output/api/repositories/VideoGame.js
@@ -13,12 +13,12 @@
 //Dependencies
 const { db } = require('./sqllite_conn.js');
 
-exports.getAllVideoGames = async (name, developer, gamesystem, genre, year, sort, fields) => {
+exports.getAllVideoGames = async (name, developer, gamesystem, genre, year, sort) => {
     return new Promise((resolve, reject) => { // we need promise for managing errors and results inside callbacks
         console.log("\x1b[32m", 'executing getAllVideoGames.');
         
-        let sql = `SELECT * FROM VideoGames WHERE name = ? AND developer = ? AND gamesystem = ? AND genre = ? AND year = ? AND sort = ? AND fields = ?`;
-        let params = [name, developer, gamesystem, genre, year, sort, fields];
+        let sql = `SELECT * FROM VideoGames WHERE name = ? AND developer = ? AND gamesystem = ? AND genre = ? AND year = ? AND sort = ?`;
+        let params = [name, developer, gamesystem, genre, year, sort];
         db.all(sql, params, function (err, results) {
             if (err) reject(err); 
             resolve(results);           
@@ -63,7 +63,7 @@ exports.getOneVideoGameById = async (id) => {
 }
 
 exports.updateVideoGame = async (id, videogame) => {
-    return new Promise((resolve, reject) => { // we need promise for managing errors and results inside callbacks
+    return new Promise((resolve, reject) => { // we need promise for managing errors and results inside callbacks        
         console.log("\x1b[32m", 'executing updateVideoGame.');
         
         let name = videogame.name;
@@ -72,11 +72,11 @@ exports.updateVideoGame = async (id, videogame) => {
         let genre = videogame.genre;
         let year = videogame.year;
         let image = videogame.image;
-        let sql = `UPDATE VideoGames SET name = ?, developer = ?, gamesystem = ? WHERE id = ?`;
-        let params = [name,developer,gamesystem,id];
-        db.run(sql, params, function (err, result) {
+        let sql = `UPDATE VideoGames SET name = ?, developer = ?, gamesystem = ?, genre = ?, year = ?, image = ? WHERE id = ?`;
+        let params = [name, developer, gamesystem, genre, year, image, id];
+        db.run(sql, params, function (err) {            
             if (err) reject(err);            
-            resolve(this);
+            resolve({ changed: this.changes });       
         });
     });
     //.then(() => {});
